--- a/Web/src/styles/main.css
+++ b/Web/src/styles/main.css
@@ -1,3 +1,16 @@
+/*Loading VIEW*/
+
+.loading{
+  height: calc(100vh - 80px);
+  overflow-y: hidden;
+  border-bottom: 1px solid lightgrey;
+  color: grey;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 /*FUND VIEW*/
 
 .fund-view {
