--- a/Web/src/styles/main.css
+++ b/Web/src/styles/main.css
@@ -77,6 +77,7 @@
 .asset-view>h1, .asset-view>h3 {
   text-align: right;
   margin-right: 24px;
+  font-weight: 300;
 }
 
 .asset-view>h2 {
@@ -89,7 +90,7 @@
   height: 45px;
   width: calc(50% - 40px);
   font-size: 21px;
-  padding-left: 10px;
+  /* padding-left: 10px; */
   background: none;
   border: none;
   border-bottom: 1px dashed darkgray;
@@ -100,6 +101,8 @@
   align-items: center;
   display: flex;
   padding: 48px;
+  padding-top: 24px;
+  padding-bottom: 0;
 }
 
 .input-value:focus {
@@ -152,14 +155,14 @@ button {
   background-color: #ff3939;
 }
 
-.order.cancel{
+.order.cancel {
   background-color: #d2d2d2;
   width: 70px;
   height: 29px;
   margin-top: 0;
   position: relative;
   top: -7px;
-  left:12px;
+  left: 12px;
   display: inline-flex;
   justify-content: center;
   align-items: center;
@@ -191,4 +194,58 @@ button {
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+.setup-fund-view span {
+  font-weight: 200;
+  font-size: 28px;
+}
+
+.setup-fund-view button {
+  background-color: black;
+  color: white;
+  width: auto;
+  border-radius: 10px;
+  font-weight: 300;
+}
+
+.toggle {
+  height: 50px;
+  width: 120px;
+  border-radius: 10px;
+  border-color: black;
+  border-width: 1px;
+  border-style: solid;
+  background-color: white;
+  cursor: pointer;
+}
+
+.toggle-container {
+  display: flex;
+  margin: 48px;
+}
+
+.toggle-container button {
+  width: 180px;
+  background-color: black;
+  border: 0;
+  color: white;
+  border-radius: 10px;
+  margin-left: 28px;
+  font-weight: 300;
+}
+
+.toggle span {
+  height: 50px;
+  width: 60px;
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 12px;
+  border-radius: 7px;
+}
+
+.toggle .selected {
+  background-color: black;
+  color: white;
 }
