--- a/Web/src/styles/main.css
+++ b/Web/src/styles/main.css
@@ -90,7 +90,6 @@
   height: 45px;
   width: calc(50% - 40px);
   font-size: 21px;
-  /* padding-left: 10px; */
   background: none;
   border: none;
   border-bottom: 1px dashed darkgray;
@@ -208,6 +207,8 @@ button {
   border-radius: 10px;
   font-weight: 300;
 }
+
+/*TOGGLE*/
 
 .toggle {
   height: 50px;
